--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply dark:bg-[#111111] bg-white dark:text-white text-black;
+    @apply bg-[#111111] text-white;
   }
 }
 
@@ -26,16 +26,4 @@ html {
     padding-right: 2rem;
     padding-left: 2rem;
   }
-}
-
-.scrollcontainer::-webkit-scrollbar {
-  width: 4px;
-}
-
-.scrollcontainer::-webkit-scrollbar-track {
-  @apply bg-transparent;
-}
-
-.scrollcontainer::-webkit-scrollbar-thumb {
-  @apply rounded-md bg-zinc-200 dark:bg-[#212121];
 }
